<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="320dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/book_your_ride_now"
            android:textColor="#E91E63"
            android:textSize="32sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/from"
            android:layout_width="320dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/edittextstyle"
            android:hint="@string/enter_the_boarding_point"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#F4F2F5"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/to"
            android:layout_width="324dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/edittextstyle"
            android:hint="@string/enter_the_dropping_point"
            android:inputType="textPersonName"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/date"
            android:layout_width="324dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittextstyle"
            android:hint="@string/date_of_ride"
            android:inputType="date"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="italic"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/timing"
            android:layout_width="324dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittextstyle"
            android:hint="@string/timing"
            android:inputType="time"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="italic"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/taxi_cost"
            android:layout_width="324dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittextstyle"
            android:hint="@string/approx_value"
            android:inputType="numberDecimal"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="18sp"
            android:textStyle="italic"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/ride_booking"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonstyleselector"
            android:text="@string/book" />

    </LinearLayout>
</RelativeLayout>